# Links

./: pyproject.toml
src/: manage.py
src/links/: admin.py  email_service.py  models.py  urls.py  views.py
src/links/migrations/: 0001_initial.py  0002_remove_message_empresa.py
src/links/templates/: base.html  contact.html  links.html
src/links_page/: asgi.py  settings.py  urls.py  wsgi.py
