[project]
name = "linkpage-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Danilo Santos",email = "danilocraft933@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
]

[tool.poetry]
packages = [{include = "linkpage_django", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
